# SLM_PROMPTING

./: .gitignore  README.md  config.py  main.py  pyproject.toml  연구노트.md
analysis/v1/: SCORING.md  collapse_threshold.csv  eval_results.csv
analysis/v2/: SCORING.md  collapse_threshold.csv  eval_results.csv
prompts/: __init__.py  cot.txt  few_shot.txt  json_schema.txt  structured.txt  xml.txt  zero_shot.txt
scripts/: evaluate.py  generate_data.py  report.py  run_experiment.py
