[project]
name = "slm-prompting"
version = "0.1.0"
description = "Prompting technique x document length combinations vs. JSON structured output stability in small language models (Qwen2.5 1.5B/3B/7B)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.26.0",
    "matplotlib>=3.10.9",
    "ollama>=0.6.2",
    "openai>=2.36.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]
